--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-PeaceArmagHuMan
-Appendix 1 Policy Console
-Human name
-Taviel
-
-Guardian AI name
-Chat
-
-Run
-Result
-{}
+<!doctype html>
+<html>
+...
+<input id="human" ...
+<script>
+...
