--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <label for="human">Human name</label>
 <input id="human" type="text" value="Taviel">
 
-<label for="guardian">Guardian AI name</label>
+<label for="guardian">Guardian Angel name</label>
 <input id="guardian" type="text" value="Chat">
 
 <br>
