--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
 <h2>Clause 3.1 — Executor Selection</h2>
 
 <label for="human">Human name</label>
-<input id="human" type="text" value="Taviel">
+<input id="human" type="text" placeholder="Enter Human name">
 
 <label for="guardian">Guardian Angel name</label>
-<input id="guardian" type="text" value="Chat">
-
+<input id="guardian" type="text" placeholder="Enter Guardian Angel name">
 <br>
 <button onclick="run()">Run</button>
 
